@@ -1,0 +1,6 @@
+// English lang variables for WP2.5
+
+tinyMCE.addI18n({en_US:{
+NextGEN:{	
+desc : 'Add NextGEN Gallery'
+}}});
