@@ -3,6 +3,7 @@ by Alex Rabe & NextGEN DEV Team
 
 V0.90
 - NEW : Sort order for images (in porgess !!!)
+- Added   : TinyMCE V3 Button for WordPress 2.5 
 - Changed : wpdb->escape gallerytag in nggfunctions.
 - Changed : Sort files after scan folder
 - Changed : Check for filename during upload
